modules/vpc/vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  tags = {
    Name = "VM_cluster_VPC"
  }
}
